style.css
@font-face {
    font-family: Lato Medium;
    src: url("./fonts/Lato-Medium.ttf");
}

@font-face {
    font-family: Lato Bold;
    src: url("./fonts/Lato-Bold.ttf");
}

@font-face {
    font-family: Lato Heavy;
    src: url("./fonts/Lato-Heavy.ttf");
}

@font-face {
    font-family: Lato Semibold;
    src: url("./fonts/Lato-Semibold.ttf");
}

@font-face {
    font-family: Lato Regular;
    src: url("./fonts/Lato-Regular.ttf");
}

@font-face {
    font-family: Montserrat Ultra Light;
    src: url("./fonts/Montserrat-UltraLight.otf");
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

.container {
    width: 1600px;
    margin: 0 auto;
}

.grid {
    display: grid;
}

header {
    color: #ffffff;
    background: url("./img/Header BG.png") no-repeat 100%;
}

header > .wrapper {
    height: 944px;
    width: 1200px;
    margin: 0 auto;
    grid-template-rows: 90px auto;
}

header nav {
    border-bottom: 1px solid #2E2E30;
    grid-template-columns: 133px auto;
}

header nav > .logo {
    align-self: center;
}

header nav > ul {
    display: flex;
    justify-content: flex-end;
    height: 100%;
    font-family: Lato Medium, sans-serif;
}

header nav > ul > li {
    display: flex;
    align-items: center;
    list-style: none;
    margin-left: 72px;
    position: relative;
    height: calc(100% + 1px);
}

header nav > ul > li:hover {
    border-bottom: 1px solid #ffffff;
    border-top: 1px solid transparent;
    cursor: pointer;
}

header .title {
    margin: 0 auto;
    align-items: center;
}

header .title  h1 {
    font-size: 72px;
    font-family: Myriad Pro, sans-serif;
    font-style: normal;
}

header .title > div {
    text-align: center;
    font-size: 32px;
    font-family: Georgia, sans-serif;
    font-style: italic;
}

header > .login {
    display: flex;
    height: 100px;
    background: #2fac6c;
    font-family: Lato Medium, sans-serif;
}

header > .login > div {
    position: relative;
    bottom: 0;
    display: flex;
    font-size: 22px;
    align-items: center;
}

header > .login > .sign-in {
    width: 810px;
    height: 100%;
    background: url("./img/Login BG.png") no-repeat;
    padding-left: 471px;
}

header > .login > .sign-up {
    padding-left: 242px;
}

header > .login span {
    position: relative;
    bottom: 0;
    transition: all 0.1s;
}

header > .login > .sign-in > span:hover,
header > .login > .sign-up > span:hover {
    cursor: pointer;
    bottom: 5px;
}

/* MAIN */

main > .domains {
    width: 891px;
    margin: 0 auto;
    text-align: center;
}


main > .domains > h4 {
    font-family: Lato Heavy, sans-serif;
    font-size: 24px;
    margin-top: 75px;
}

main > .domains > div {
    font-family: Montserrat Ultra Light, sans-serif;
    font-size: 16px;
    margin-top: 25px;
}

main > .domains > form {
    display: flex;
    flex-direction: row;
    height: 50px;
    margin-top: 50px;
    border: 1px solid #D9D9D9;
}

main > .domains > form > * {
    display: flex;
    margin: 8px 0;
    padding: 0 15px;
}

main > .domains > form > *:nth-child(1) {
    border-right: 1px solid #D9D9D9;
}

main > .domains > form > *:nth-child(3) {
    border-left: 1px solid #D9D9D9;
}

main > .domains > form .www,
main > .domains > form .want {
    display: flex;
    align-self: center;
}

main > .domains > form [name=domains] {
    -webkit-appearance: none;
    -moz-appearance: none;
    background: transparent;
    background-image: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 129 129' xmlns:xlink='http://www.w3.org/1999/xlink' enable-background='new 0 0 129 129' width='8px'><path d='m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z'/></svg>");
    background-repeat: no-repeat;
    background-position-x: 100%;
    background-position-y: 13px;
    border: none;
    padding-right: calc(15px + 8px);

}

main > .domains > form [name=domains]:after {
    /*content: "<";*/
}

0rem

